fix(control): Grid Menu z-index is too low when inside a modal window

--- a/aurelia-slickgrid/src/aurelia-slickgrid/styles/slick-controls.scss
+++ b/aurelia-slickgrid/src/aurelia-slickgrid/styles/slick-controls.scss
@@ -16,7 +16,7 @@
   min-width: 150px;
   cursor: default;
   position: absolute;
-  z-index: 20;
+  z-index: 2000;
 	overflow: auto;
   resize: both;
 
